err/servicemanager.err
Listing '.'...
Listing './bin'...
Compiling './bin/bottle.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/_pytest'...
Listing './lib/python3.5/site-packages/_pytest/assertion'...
Listing './lib/python3.5/site-packages/argcomplete'...
Listing './lib/python3.5/site-packages/argcomplete/bash_completion.d'...
Listing './lib/python3.5/site-packages/argcomplete-0.8.1.egg-info'...
Listing './lib/python3.5/site-packages/bottle-0.12.4.egg-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pytest-2.5.2.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.8.1.dist-info'...
Listing './lib/python3.5/site-packages/servicemanager'...
Listing './lib/python3.5/site-packages/servicemanager/actions'...
Compiling './lib/python3.5/site-packages/servicemanager/actions/actions.py'...
***   File "./lib/python3.5/site-packages/servicemanager/actions/actions.py", line 29
    print "There is already: '" + str(len(existing_service_status)) + "' instance(s) of the service: '" + service_name + "' running"
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/servicemanager/server'...
Compiling './lib/python3.5/site-packages/servicemanager/server/smserverlogic.py'...
***   File "./lib/python3.5/site-packages/servicemanager/server/smserverlogic.py", line 37
    print "Bad Request: " + message
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/servicemanager/service'...
Compiling './lib/python3.5/site-packages/servicemanager/service/smdropwizardservice.py'...
***   File "./lib/python3.5/site-packages/servicemanager/service/smdropwizardservice.py", line 41
    print "ERROR: required config 'configurationFile' does not exist"
                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/servicemanager/service/smexternalservice.py'...
***   File "./lib/python3.5/site-packages/servicemanager/service/smexternalservice.py", line 45
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/servicemanager/service/smjvmservice.py'...
***   File "./lib/python3.5/site-packages/servicemanager/service/smjvmservice.py", line 117
    print "name: %s\tppid: %s\tpid: %s\tuptime: %s" % (self.service_name, process.ppid, process.pid, process.uptime)
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/servicemanager/service/smplayservice.py'...
***   File "./lib/python3.5/site-packages/servicemanager/service/smplayservice.py", line 56
    print "Starting service with proxy, '" + str(self.proxy) + "'"
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/servicemanager/serviceresolver.py'...
***   File "./lib/python3.5/site-packages/servicemanager/serviceresolver.py", line 26
    print "The requested service %s does not exist" % service_name
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/servicemanager/smartifactrepofactory.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (smartifactrepofactory.py, line 13)
Compiling './lib/python3.5/site-packages/servicemanager/smbintray.py'...
***   File "./lib/python3.5/site-packages/servicemanager/smbintray.py", line 92
    print b.warning + "WARNING: Due to lack of version data from Bintray you may not have an up to date version..." + b.endc
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/servicemanager/smcontext.py'...
***   File "./lib/python3.5/site-packages/servicemanager/smcontext.py", line 76
    print b.warning + "WARNING: The profile %s conflicts with a service of the same name, this hides the profile and makes it unusable!!!" % profile + b.endc
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/servicemanager/smnexus.py'...
***   File "./lib/python3.5/site-packages/servicemanager/smnexus.py", line 189
    print b.warning + "WARNING: Due to lack of version data from nexus you may not have an up to date version..." + b.endc
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/servicemanager/smprocess.py'...
***   File "./lib/python3.5/site-packages/servicemanager/smprocess.py", line 20
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/servicemanager/smrepo.py'...
***   File "./lib/python3.5/site-packages/servicemanager/smrepo.py", line 13
    print "pulling '" + name + "' from repo '" + project_info["sources"]["repo"] + "'"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/servicemanager/subprocess.py'...
***   File "./lib/python3.5/site-packages/servicemanager/subprocess.py", line 723
    raise exc_type, exc_value, exc_trace
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/servicemanager/thirdparty'...
Listing './lib/python3.5/site-packages/servicemanager-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
